objects/Trip_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Account_Opportunity__c</fullName>
        <formula>IF( OR(NOT(ISBLANK ( Account__c )), NOT(ISBLANK (  Opportunity__c  ) )), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to Account / Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Call_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Call Report</label>
        <referenceTo>Trip_Report__c</referenceTo>
        <relationshipLabel>Related / Copied Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Call Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_name__c</fullName>
        <formula>IF(NOT(ISBLANK( Account__c)),  Account__r.Name, IF(NOT(ISBLANK( Lead__c)),  Lead__r.Company , &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>CreatedBy.Division</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_email_address__c</fullName>
        <formula>Lead__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead email address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Details__c</fullName>
        <label>Location Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESSENTRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Meeting__c</fullName>
        <defaultValue>today()+180</defaultValue>
        <label>Next Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Trip_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Reports</relationshipLabel>
        <relationshipName>Call_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>leadname__c</fullName>
        <formula>Lead__r.FirstName &amp;&apos; &apos; &amp; Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leadname</label>
        <type>Text</type>
    </fields>
    <label>Call Report</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Executive_Summary__c</columns>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>X1_My_Call_Reports</fullName>
        <columns>NAME</columns>
        <columns>Visit_Date__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Details__c</columns>
        <columns>Base_Call_Report__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>1. My Call Reports with Accounts</label>
    </listViews>
    <listViews>
        <fullName>X2_All_Call_Reports_with_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Visit_Date__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Details__c</columns>
        <columns>Base_Call_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>2. All Call Reports with Accounts</label>
    </listViews>
    <listViews>
        <fullName>X3_My_Call_Report_with_Leads</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Visit_Date__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Details__c</columns>
        <columns>Base_Call_Report__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>3. My Call Report with Leads</label>
    </listViews>
    <listViews>
        <fullName>X4_All_Call_Report_with_Leads</fullName>
        <columns>NAME</columns>
        <columns>Lead__c</columns>
        <columns>Visit_Date__c</columns>
        <columns>Contact_Type__c</columns>
        <columns>Location__c</columns>
        <columns>Location_Details__c</columns>
        <columns>Base_Call_Report__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>4. All Call Report with Leads</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Subject</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Reports</pluralLabel>
    <recordTypes>
        <fullName>Account_Opportunity</fullName>
        <active>true</active>
        <description>Trip Report assigned to Account or Opportunity</description>
        <label>Account or Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Trip_Report</fullName>
        <active>true</active>
        <description>For Trip Report assigned to a Lead</description>
        <label>Lead Trip Report</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>